--- a/style.css
+++ b/style.css
@@ -9,24 +9,18 @@ body {
   padding: 6px;
 }
 
-#start {
-  width: 130px;
-  height: 60px;
-}
-
 #matrix {
-  margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(6, 60px);
-  grid-template-rows: repeat(7, 60px) 0 0 0;
+  grid-template-rows: repeat(8, 60px) 0 0 0 0;
   grid-gap: 10px;
   gap: 10px;
 }
 
 .tile {
+  box-sizing: border-box;
   display: inline-block;
   position: relative;
-  box-sizing: border-box;
   width: 100%;
   height: 100%;
   background-color: #99c;
@@ -41,7 +35,9 @@ body {
   color: transparent;
 }
 
-#start .tile, #finish, .debug #matrix .tile {
+#start,
+#finish,
+.debug #matrix .tile {
   color: #000;
 }
 
@@ -65,20 +61,12 @@ body {
   display: none;
 }
 
-#start:target:hover .tile,
-.tile:target:hover {
-  background-color: #ff4;
-  border-color: #991;
-  z-index: 4;
-}
-
-#start:target .tile:hover,
 .tile:target:hover {
   background-color: #4f4;
   border-color: #191;
+  z-index: 4;
 }
 
-#start:target:hover + div > .tile:first-child,
 .tile:target:hover + .tile {
   background-color: #ff4;
   border-color: #991;
@@ -86,7 +74,6 @@ body {
   z-index: 3;
 }
 
-#start:target + div > .tile:first-child:hover,
 .tile:target + .tile:hover {
   background-color: #ff4;
   border-color: #991;
@@ -113,7 +100,6 @@ body {
   border-color: #00f;
 }
 
-#start:target .tile:hover::before,
 .tile:target:hover::before {
   opacity: 1;
   width: 30px;
@@ -177,60 +163,63 @@ body {
   width: 310px;
 }
 
-#finish { grid-area: 7 / 5 / 8 / 7; }
+#start   { grid-area: 1 / 1 / 2 / 3; }
+#filler1 { grid-area: 1 / 3 / 2 / 7; }
+#filler2 { grid-area: 8 / 1 / 9 / 5; }
+#finish  { grid-area: 8 / 5 / 9 / 7; }
 #finish::before { display: none; }
 
 /* targeted moves */
 
-#c03:target        { grid-area: 1 / 3 / 2 / 6; }
-#c04:target        { grid-area: 1 / 3 / 3 / 7; }
-#c05:target        { grid-area: 2 / 2 / 6 / 3; }
-#c05:target ~ #c06 { grid-area: 5 / 3 / 6 / 4; }
-#c06:target        { grid-area: 4 / 3 / 6 / 3; }
-#c06:target ~ #c07 { grid-area: 4 / 4 / 5 / 5; }
-#c07:target        { grid-area: 3 / 4 / 5 / 5; }
-#c07:target ~ #c08 { grid-area: 3 / 5 / 4 / 6; }
-#c08:target        { grid-area: 2 / 5 / 4 / 6; }
-#c08:target ~ #c09 { grid-area: 2 / 4 / 3 / 5; }
-#c09:target        { grid-area: 2 / 3 / 3 / 5; }
-#c09:target ~ #c10 { grid-area: 2 / 2 / 3 / 3; }
-#c10:target        { grid-area: 2 / 2 / 3 / 5; }
-#c10:target ~ #c11 { grid-area: 2 / 5 / 3 / 6; }
-#c12:target        { grid-area: 2 / 6 / 6 / 7; }
-#c12:target ~ #c13 { grid-area: 5 / 5 / 6 / 6; }
-#c13:target        { grid-area: 5 / 1 / 6 / 6; }
-#c13:target ~ #c14 { grid-area: 4 / 1 / 5 / 2; }
-#c14:target        { grid-area: 2 / 1 / 5 / 2; }
-#c14:target ~ #c15 { grid-area: 2 / 2 / 3 / 3; }
-#c15:target        { grid-area: 2 / 2 / 3 / 3; }
-#c15:target ~ #c16 { grid-area: 3 / 2 / 4 / 3; }
-#c16:target        { grid-area: 3 / 2 / 5 / 4; }
-#c16:target ~ #c17 { grid-area: 4 / 1 / 5 / 2; }
-#c17:target        { grid-area: 2 / 1 / 5 / 4; }
-#c17:target ~ #c18 { grid-area: 2 / 4 / 3 / 5; }
-#c18:target        { grid-area: 2 / 1 / 6 / 5; }
-#c18:target ~ #c19 { grid-area: 6 / 1 / 7 / 2; }
-#c19:target        { grid-area: 6 / 1 / 7 / 7; }
-#c19:target ~ #c20 { grid-area: 5 / 6 / 6 / 7; }
-#c20:target        { grid-area: 2 / 6 / 6 / 7; }
-#c20:target ~ #c21 { grid-area: 2 / 5 / 3 / 6; }
-#c21:target        { grid-area: 2 / 4 / 3 / 6; }
-#c21:target ~ #c22 { grid-area: 3 / 4 / 4 / 5; }
-#c22:target        { grid-area: 3 / 4 / 4 / 5; }
-#c22:target ~ #c23 { grid-area: 4 / 4 / 5 / 5; }
-#c23:target        { grid-area: 4 / 4 / 5 / 6; }
-#c23:target ~ #c24 { grid-area: 3 / 5 / 4 / 6; }
-#c24:target        { grid-area: 2 / 5 / 4 / 6; }
-#c24:target ~ #c25 { grid-area: 2 / 4 / 3 / 5; }
-#c25:target        { grid-area: 2 / 4 / 3 / 5; }
-#c25:target ~ #c26 { grid-area: 2 / 2 / 3 / 3; }
-#c26:target        { grid-area: 2 / 2 / 3 / 3; }
-#c26:target ~ #c27 { grid-area: 2 / 1 / 3 / 2; }
-#c27:target        { grid-area: 2 / 1 / 3 / 2; }
-#c27:target ~ #c28 { grid-area: 5 / 1 / 6 / 2; }
-#c28:target        { grid-area: 5 / 1 / 6 / 2; }
-#c28:target ~ #c29 { grid-area: 5 / 6 / 6 / 7; }
-#c29:target        { grid-area: 5 / 6 / 6 / 7; }
+#c03:target        { grid-area: 2 / 3 / 3 / 6; }
+#c04:target        { grid-area: 2 / 3 / 4 / 7; }
+#c05:target        { grid-area: 3 / 2 / 7 / 3; }
+#c05:target ~ #c06 { grid-area: 6 / 3 / 7 / 4; }
+#c06:target        { grid-area: 5 / 3 / 7 / 3; }
+#c06:target ~ #c07 { grid-area: 5 / 4 / 6 / 5; }
+#c07:target        { grid-area: 4 / 4 / 6 / 5; }
+#c07:target ~ #c08 { grid-area: 4 / 5 / 5 / 6; }
+#c08:target        { grid-area: 3 / 5 / 5 / 6; }
+#c08:target ~ #c09 { grid-area: 3 / 4 / 4 / 5; }
+#c09:target        { grid-area: 3 / 3 / 4 / 5; }
+#c09:target ~ #c10 { grid-area: 3 / 2 / 4 / 3; }
+#c10:target        { grid-area: 3 / 2 / 4 / 5; }
+#c10:target ~ #c11 { grid-area: 3 / 5 / 4 / 6; }
+#c12:target        { grid-area: 3 / 6 / 7 / 7; }
+#c12:target ~ #c13 { grid-area: 6 / 5 / 7 / 6; }
+#c13:target        { grid-area: 6 / 1 / 7 / 6; }
+#c13:target ~ #c14 { grid-area: 5 / 1 / 6 / 2; }
+#c14:target        { grid-area: 3 / 1 / 6 / 2; }
+#c14:target ~ #c15 { grid-area: 3 / 2 / 4 / 3; }
+#c15:target        { grid-area: 3 / 2 / 4 / 3; }
+#c15:target ~ #c16 { grid-area: 4 / 2 / 5 / 3; }
+#c16:target        { grid-area: 4 / 2 / 6 / 4; }
+#c16:target ~ #c17 { grid-area: 5 / 1 / 6 / 2; }
+#c17:target        { grid-area: 3 / 1 / 6 / 4; }
+#c17:target ~ #c18 { grid-area: 3 / 4 / 4 / 5; }
+#c18:target        { grid-area: 3 / 1 / 7 / 5; }
+#c18:target ~ #c19 { grid-area: 7 / 1 / 8 / 2; }
+#c19:target        { grid-area: 7 / 1 / 8 / 7; }
+#c19:target ~ #c20 { grid-area: 6 / 6 / 7 / 7; }
+#c20:target        { grid-area: 3 / 6 / 7 / 7; }
+#c20:target ~ #c21 { grid-area: 3 / 5 / 4 / 6; }
+#c21:target        { grid-area: 3 / 4 / 4 / 6; }
+#c21:target ~ #c22 { grid-area: 4 / 4 / 5 / 5; }
+#c22:target        { grid-area: 4 / 4 / 5 / 5; }
+#c22:target ~ #c23 { grid-area: 5 / 4 / 6 / 5; }
+#c23:target        { grid-area: 5 / 4 / 6 / 6; }
+#c23:target ~ #c24 { grid-area: 4 / 5 / 5 / 6; }
+#c24:target        { grid-area: 3 / 5 / 5 / 6; }
+#c24:target ~ #c25 { grid-area: 3 / 4 / 4 / 5; }
+#c25:target        { grid-area: 3 / 4 / 4 / 5; }
+#c25:target ~ #c26 { grid-area: 3 / 2 / 4 / 3; }
+#c26:target        { grid-area: 3 / 2 / 4 / 3; }
+#c26:target ~ #c27 { grid-area: 3 / 1 / 4 / 2; }
+#c27:target        { grid-area: 3 / 1 / 4 / 2; }
+#c27:target ~ #c28 { grid-area: 6 / 1 / 7 / 2; }
+#c28:target        { grid-area: 6 / 1 / 7 / 2; }
+#c28:target ~ #c29 { grid-area: 6 / 6 / 7 / 7; }
+#c29:target        { grid-area: 6 / 6 / 7 / 7; }
 
 #score::after {
   content: counter(score);
