--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url(rock.jpg);
+  background-image: url(images/rock.jpg);
   background-color: #99c;
   border: 4px solid #448;
   border-left-color: #ffffff44;
@@ -55,7 +55,7 @@ body {
   left: 0;
   width: 420px;
   height: 422px;
-  background-image: url(lava.gif);
+  background-image: url(images/lava.gif);
   border: 1px dotted #eee;
   border-radius: 10px;
 }
@@ -108,7 +108,7 @@ body {
   width: 0;
   height: 4px;
   z-index: 4;
-  background-image: url(bridge.png);
+  background-image: url(images/bridge.png);
   border: 4px solid transparent;
   border-radius: 6px;
   transition: width 0.6s;
@@ -252,7 +252,7 @@ body {
   width: 24px;
   height: 20px;
   background-color: #ffffff33;
-  background-image: url(diamond.png);
+  background-image: url(images/diamond.png);
   background-repeat: none;
   border-radius: 50%;
   cursor: grab;
@@ -279,7 +279,7 @@ body {
   position: absolute;
   top: 8px;
   left: 8px;
-  background-image: url(mist.gif), url(mist2.gif);
+  background-image: url(images/mist.gif), url(images/mist2.gif);
   cursor: none;
   opacity: 0.25;
 }
